[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-lens"
version = "0.0.0" # This is automatically set by the CD pipeline on release
description = "An implementation of transformers tailored for mechanistic interpretability."
authors = [{name = "Neel Nanda", email = "77788841+neelnanda-io@users.noreply.github.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "einops ~=0.6.0",
    "numpy ~=1.21; python_version < '3.10'",
    "numpy ~=1.23; python_version >='3.10'",
    "torch ~=1.10",
    "datasets ~=2.7.1",
    "transformers ~=4.25.1",
    "tqdm ~=4.64.1",
    "pandas ~=1.1.5",
    "wandb ~=0.13.5",
    "fancy-einsum ~=0.0.3",
    "rich ~=12.6.0",
    "jaxtyping ~=0.2.11",
    # TODO: put these in dev
    "pytest ~=7.2.0",
    "pytest-cov ~=4.0.0",
    "mypy ~=0.991",
    "jupyter ~=1.0.0",
    "circuitsvis ~=1.38.1",
    "plotly ~=5.12.0",
]

[project.optional-dependencies]
docs = [
    "sphinx ==5.2.3; python_version =='3.9'",
    "sphinxcontrib-napoleon ~=0.7; python_version =='3.9'",
    "sphinx-autobuild ~=2021.3.14; python_version =='3.9'",
    "furo ~=2022.12.7; python_version =='3.9'",
    "myst-parser ~=0.18.1; python_version =='3.9'",
    "tabulate ~=0.9.0; python_version =='3.9'",
]
# TODO... maybe these should not be optional? In poetry this was [tool.poetry.group.dev.dependencies]
dev = [
]
# In poetry this was [tool.poetry.group.jupyter.dependencies]
jupyter = [
    "plotly ~=3.5.0",
]

[project.urls]
"Homepage" = "https://github.com/neelnanda-io/TransformerLens"
"Bug Tracker" = "https://github.com/neelnanda-io/TransformerLens/issues"